GL/Projet_GL/src/test/deca/context/invalid/classes/super_class.deca
// Description:
// Test contextuel : héritage vers une classe inexistante.
//
// Resultats:
//    Ligne 7: Classe B non definie.
//    Erreur: Field cannot be declared with type void
//

class A extends B {
}

{
}
